# mcp-pyzotero

./: .gitignore  LICENSE  README.md  pyproject.toml  zotero.py
